5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1793_1599.log
== TEST (2019-05-30 18:09:03) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
p=0
s=0
d=v*0.15
if(v<80):
	print(v)
else:
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    p=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:09:14) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
d=v*0.15
if(v<80):
	print(v)
else:
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    d=v*0.15
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:09:45) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
d= 0.15 * v
if(v<80):
	print(v)
else:
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    d= 0.15 * v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:07) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if(v<80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if(v<80):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:28) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if(v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if(v < 80):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:36) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:37) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:37) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:37) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:38) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:38) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:38) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:38) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:38) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:38) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:39) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:39) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:39) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:40) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:58) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:58) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:11:59) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- EXECUTION TIME:
0.141481
-- ERROR:
  File "/home/codebench/codes/1793/1599/main.py", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:00) 
-- CODE:
from numpy import *
v=array(eval(input("custo dos itens"))
if (v < 80):
	print(v)
else:
	d=v*0.15
	print(round(d, 2))

		  
-- ERROR:
File "XXXX", line 3
    if (v < 80):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:15:02) 
-- CODE:
from numpy import *
vc=array(eval(input("custo dos itens")))
p=0
while (p<size(vc)):
	if (vc[p]>80):
		vc[p]=vc[p]*0.15
	p=p+1
print(float(round(sum(vc), 2)))

		  
-- EXECUTION TIME:
0.37754
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:18) 
-- CODE:
from numpy import *
vc=array(eval(input("custo dos itens")))
p=0
while (p<size(vc)):
	if (vc[p]>80):
		vc[p]=vc[p]*0.15
	p=p+1
print(float(round(sum(vc), 2)))

		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:11) 
-- CODE:
from numpy import *
vc=array(eval(input("custo dos itens")))
p=0
while (p<size(vc)):
	if (vc[p]>80):
		vc[p]=vc[p]*0.15
	p=p+1
print(float(round(sum(vc), 2)))

		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:28:38) 
-- CODE:
from numpy import *
vc=array(eval(input("custo dos itens")))
p=0
while (p<size(vc)):
	if (vc[p]>80):
		vc[p]=vc[p]*0.15
	p=p+1
print(float(round(sum(vc), 2)))

		  
-- EXECUTION TIME:
0.442225
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
